# TeddyBear

./: .gitignore  audio_test.py  core.py  pyproject.toml  teddy_bear.py  teddy_memory.json  teddy_spec.md  test_camera.py
teddy_bear/: core.py
