[project]
name = "teddy-bear"
version = "0.1.0"
description = "Local AI Teddy Bear"
requires-python = ">=3.10"
dependencies = [
    "langchain-xai",
    "pyttsx3",
    "python-dotenv",
    "numpy>=2.2.6",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "mlx-whisper>=0.4.3",
]

[tool.uv]
package = false
